# cat-breed-explorer-android

./: .gitignore  LICENCE.md  README.md  bitbucket-pipelines.yml  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/io/github/horaciocome1/catbreedexplorer/data/remote/: BreedsServiceTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore
app/src/main/java/io/github/horaciocome1/catbreedexplorer/: CatBreedExplorerApplication.kt  MainActivity.kt
app/src/main/java/io/github/horaciocome1/catbreedexplorer/data/: Module.kt
app/src/main/java/io/github/horaciocome1/catbreedexplorer/data/db/: AppDataStore.kt  AppDatabase.kt
app/src/main/java/io/github/horaciocome1/catbreedexplorer/data/mappers/: BreedMapper.kt
app/src/main/java/io/github/horaciocome1/catbreedexplorer/data/remote/: BreedsService.kt
app/src/main/java/io/github/horaciocome1/catbreedexplorer/data/repository/: BreedsRepository.kt  FavoriteBreedsRepository.kt
app/src/main/java/io/github/horaciocome1/catbreedexplorer/domain/mappers/: BreedMapper.kt
app/src/main/java/io/github/horaciocome1/catbreedexplorer/domain/model/: BreedDetailsModel.kt  (+1 more)
app/src/main/res/drawable/: like_filled.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/io/github/horaciocome1/catbreedexplorer/util/: BreedFakeUtil.kt
(+35 files in other folders)
